[GROWTH-4119] Create a base config for all NodeJS services in the Renovate branch

--- a/renovate.json
+++ b/renovate.json
@@ -10,9 +10,7 @@
     },
     "packageRules": [
         {
-            "matchPackagePatterns": [
-                "id90-http-utils, id90-logger"
-            ],
+            "matchPackagePatterns": [ "id90-http-utils, id90-logger" ],
             "enabled": false
         }
     ],
